# kured-assistant

./: .gitlab-ci.yml  Dockerfile  README.md  kured-loop.py  pyproject.toml  switchover.py
.github/workflows/: ci.yml  docker-image.yml
